<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="80dp">

    <!-- Top: App logo and title -->
    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_check_form"
        />

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/berkshire_swash"
        android:text="@string/task_tracker"
        android:textSize="35sp"
        android:textStyle="bold" />

    <!-- Welcome Message -->
    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/berkshire_swash"
        android:text="Welcome!"
        android:textSize="18sp" />
    <!-- Middle: Input fields for email and password -->
    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewWelcome"
        android:layout_marginTop="32dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextEmail"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp" />

    <!-- Tabs or sections for 'Login' and 'Register' -->
    <RadioGroup
        android:id="@+id/radioGroupTabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextPassword"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/login1"
            android:textStyle="bold"/>

        <RadioButton
            android:id="@+id/radioButtonRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/register1"
            android:textStyle="bold"/>

    </RadioGroup>

    <!-- Bottom: Buttons for 'Login'/'Register' and 'Forgot Password' -->
    <Button
        android:id="@+id/btnLoginRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/radioGroupTabs"
        android:layout_marginTop="16dp"
        android:onClick="loginbutton"
        android:text="@string/login" />

    <TextView
        android:id="@+id/textViewForgotPassword0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLoginRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:text="Forgot Password?" />

    <TextView
        android:id="@+id/textViewHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewForgotPassword0"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:text="Help" />

</RelativeLayout>